<resources>
    <string name="app_name">SEP4app</string>
    <string name="settings">Settings</string>
    <string name="email">Email :</string>
    <string name="age">Age :</string>
    <string name="name">Name :</string>
    <string name="phone">Phone Number :</string>
    <string name="name_name">Name :</string>
    <string name="open_camera">Open Camera :</string>
    <string name="btn_submit">Submit</string>
    <string name="btn_cancel">Cancel</string>
    <string-array name="gender">
        <item>
            Male
        </item>
        <item>
            Female
        </item>
        <item>
            Other
        </item>


    </string-array>
    <string name="personGender">Gender</string>
    <string name="summary">Turn this on or off</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
